--- a/sdkjs-plugins/content/insertQR/translations/de-DE.json
+++ b/sdkjs-plugins/content/insertQR/translations/de-DE.json
@@ -1,5 +1,5 @@
 {
-"Settings": "Einstellungen",
+"QR Settings": "QR-Einstellungen",
 "Set QR Color": "QR-Farbe festlegen",
 "Set Background Color": "Hintergrundfarbe festlegen",
 "Width": "Breite",
@@ -9,5 +9,7 @@
 "Warning": "Warnung",
 "Insert QR": "QR einfügen",
 "The plugin is not supported in the Internet Explorer": "Das Plugin wird im Internet Explorer nicht unterstützt",
-"The selected text is too long": "Der ausgewählte Text ist zu lang."
+"The selected text сannot be used": "Der ausgewählte Text kann nicht verwendet werden",
+"The colors must be different": "Die Farben müssen verschieden sein",
+"Insert QR: info": "QR einfügen: Info"
 }
