--- a/sdkjs-plugins/content/insertQR/translations/pt-BR.json
+++ b/sdkjs-plugins/content/insertQR/translations/pt-BR.json
@@ -1,5 +1,5 @@
 {
-"Settings": "Configurações",
+"QR Settings": "Configurações de QR",
 "Set QR Color": "Definir Cor do QR",
 "Set Background Color": "Definir Cor de Fundo",
 "Width": "Largura",
@@ -9,5 +9,7 @@
 "Warning": "Aviso",
 "Insert QR": "Inserir QR",
 "The plugin is not supported in the Internet Explorer": "O plugin não é suportado no Internet Explorer",
-"The selected text is too long": "O texto selecionado é muito longo."
+"The selected text сannot be used": "O texto selecionado não pode ser usado",
+"The colors must be different": "As cores devem ser diferentes",
+"Insert QR: info": "Inserir QR: info"
 }
