--- a/sdkjs-plugins/content/insertQR/translations/fr-FR.json
+++ b/sdkjs-plugins/content/insertQR/translations/fr-FR.json
@@ -1,5 +1,5 @@
 {
-"Settings": "Paramètres",
+"QR Settings": "Paramètres QR",
 "Set QR Color": "Définir la couleur du QR",
 "Set Background Color": "Définir la couleur de fond",
 "Width": "Largeur",
@@ -9,5 +9,7 @@
 "Warning": "Avertissement",
 "Insert QR": "Insérer un QR",
 "The plugin is not supported in the Internet Explorer": "Le plugin n'est pas pris en charge par Internet Explorer",
-"The selected text is too long": "Le texte sélectionné est trop long."
+"The selected text сannot be used": "Le texte sélectionné ne peut pas être utilisé",
+"The colors must be different": "Les couleurs doivent être différentes",
+"Insert QR: info": "Insérer QR: info"
 }
