--- a/sdkjs-plugins/content/insertQR/translations/ja-JA.json
+++ b/sdkjs-plugins/content/insertQR/translations/ja-JA.json
@@ -1,5 +1,5 @@
 {
-"Settings": "設定",
+"QR Settings": "QR設定",
 "Set QR Color": "QR色の設定",
 "Set Background Color": "背景色の設定",
 "Width": "幅",
@@ -9,5 +9,7 @@
 "Warning": "警告",
 "Insert QR": "QRの挿入",
 "The plugin is not supported in the Internet Explorer": "このプラグインはInternet Explorerには対応していません",    
-"The selected text is too long": "選択したテキストが長すぎます"
+"The selected text сannot be used": "選択されたテキストは使用できません",
+"The colors must be different": "色は異なる必要があります",
+"Insert QR: info": "QRの挿入: 情報 "
 }
